# cpp_project_demo

./: .clang-format  CMakeLists.txt  Makefile  README.md  build.sh  report_template.xslt  test.sh
chores/: app.conf
chores/in/: daemon.in  demons.in  install.sh.in  manifest.json.in  startup.in
cmake/: ConfigProject.cmake  Debug.cmake  Option.cmake  Output.cmake  Test.cmake  ToolChain.cmake
cmake/modules/: Conan.cmake  PackageManager.cmake  StaticCheck.cmake
config/in/: demons.in  install.sh.in  manifest.json.in  startup.in
crates/: conan.profile  conanfile.txt
output/: com.company.demo_v3.0.1_101_202304171751.spk
scripts/: .pack.py  pack.sh  test.sh  verify.py
src/: CMakeLists.txt
src/businesses/: CMakeLists.txt  Test.cpp  Test.h
src/businesses/utility/: Any.h  Logger.h  Singleton.h
src/main/: CMakeLists.txt  main.cpp
src/unittest/: CMakeLists.txt
src/unittest/utility/: TestAny.cpp  TestLogger.cpp  TestSingleton.cpp  test_Log.cpp
